[package]
name = "tz-search"
version = "0.1.1"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]
license = "Apache-2.0"
keywords = ["timezone", "position"]
homepage = "https://github.com/huonw/tz-search"
repository = "https://github.com/huonw/tz-search"
documentation = "http://huonw.github.io/tz-search/tz_search/"
edition = "2021"

description = """
Compute the timezone of latitude/longitude pairs.
"""


[dependencies]
byteorder = "0.3"
flate2 = "1.0"
once_cell = "1"

[features]
unstable = []
